lightbox/style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  font-family: "Manrope", sans-serif;
  background-color: #f8fcff;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.gallery {
  /* border: solid 1px pink; */
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 30px;
  margin: 20px 0 0 0;
}

.gallery .image {
  width: 150px;
  height: 150px;
  /* border: solid 1px #e3e3e3; */
  cursor: pointer;
}

.gallery .image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border: solid 1px #e3e3e3;
  border-radius: 8px;
  transition: border 0.2s ease-in;
}

.gallery .image:hover img {
  border: solid 2px #63daff;
}

/* Lightbox */
.lightbox {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.4);
}

.lightbox .close {
  position: absolute;
  right: 30px;
  top: 30px;
  cursor: pointer;
  background: none;
  border: none;
}

.highlight-options {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 40px;
  padding: 0 30px 0;
}
.prev,
.next {
  width: 64px;
  height: 64px;
  background-color: white;
  border-radius: 50%;
  cursor: pointer;
  border: none;
  appearance: none;
  transition: background-color 0.2s ease-in;
}

.prev:hover,
.next:hover {
  background-color: rgb(230, 230, 230);
}

.full-image {
  height: 415px;
}

.full-image img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.caption {
  text-align: center;
  margin: 30px 0 0 0;
  color: white;
}

.hidden {
  display: none;
}

/* Responsiveness */
@media only screen and (max-width: 530px) {
  .gallery {
    grid-template-columns: repeat(2, 1fr);
  }

  .caption {
    font-size: 14px;
  }
}

@media only screen and (max-width: 350px) {
  body {
    /* border: solid 1px pink; */
    height: 100%;
    margin: 40px 0;
  }

  .gallery {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media only screen and (max-width: 730px) {
  /* .highlight-options {
    flex-direction: column;
  }
  .prev {
    order: 2;
  }
  .next {
    order: 3;
  } */
}

